Make the menu a fixed position on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -283,7 +283,7 @@ section:last-of-type {
         z-index: 20;
         inset: 0 0 0 0;
         height: 100dvh;
-        position: absolute;
+        position: fixed;
         translate: 0 -150%;
         box-shadow: 0 0 3px #111;
         padding: 1rem 1rem 3rem 1rem;
